[project]
name = "kaggle_projects"
dynamic = ["version"]
description = "The package for the Kaggle Projects"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "regex>=2024.11.6",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
]
classifiers = ["Private :: Do Not Upload"]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]
